# auto-zapret

./: .gitattributes  .gitignore  AGGRESSIVE_MODE.md  DOCS.md  GIT_SETUP.md  IMPLEMENTATION_PLAN.md  LICENSE  PROFILER_QUICKSTART.md  QUICK_START.md  README.md  RUN_INSTRUCTIONS.md  WINWS_AUTOSTART_FIX.md  WINWS_AUTOSTART_FIX2.md  auto-zapret-daemon.service  auto-zapret.service  blockcheck.sh  idea.md  install-windivert.cmd  install-zapret2.cmd  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  start-auto-zapret.bat  start-auto-zapret2.bat  start-winws.cmd  stop-winws.cmd  zapret-research.md
.qwen/: settings.json
InternetFix/: switch_game_mode.cmd
InternetFix/pre-configs/: Zapret_base.cmd
autozapret/: __init__.py  analyzer.py  api.py  blockcheck_selector.py  config.py  dpi_detector.py  executor.py  helpers.py  ip_monitor.py  main.py  monitor.py  nfqws_config.py  storage.py  strategy_generator.py  strategy_tester.py
autozapret2/: analyzer.py  api.py  blockcheck_selector.py  blockcheck_selector_exact.py  config.py  dpi_detector.py  executor.py  helpers.py  main.py  monitor.py  nfqws_config.py  storage.py  strategy_generator.py  strategy_tester.py
autozapret2/utils/: profiler.py
config/: autozapret.json
data/: start-nfqws-auto.cmd
docs/: tcp_monitoring_research.md
docs-archive/: BLOCKCHECK_FIXES.md  BRUTE_FORCE_IMPLEMENTATION.md  BRUTE_FORCE_MODES.md  CURL_TESTING_MIGRATION.md  PROFILER_GUIDE.md  PROFILER_IMPLEMENTATION.md  START.md  STRATEGY_SEARCH_ALGORITHM.md  STRATEGY_TESTER.md  TIMING_OPTIMIZATION.md  UI_FIXES.md  UI_UPDATES.md
templates/: base.html  domains.html  index.html  ip_monitor.html  logs.html  strategies.html
test_force/: README.md  __init__.py  ultra_fast.py
test_infra/: test_config.json
tests/: conftest.py  test_analyzer.py  test_api.py  test_dpi_detector.py  test_dpi_detector_improved.py  test_executor.py  test_main.py  test_monitor.py  test_nfqws_config.py  test_storage.py  test_strategy_generator.py  test_strategy_tester.py
trash/: .coverage  QWEN.md  Ultimate F.bat  coverage.xml  debug_bruteforce.py  smart_tuner.py  start-auto-zapret.bat  start-auto-zapret.bat — ярлык.lnk  test_full_cycle.py  test_log_parsing.py  test_methods.py  test_network_stack.py  test_winws.py  test_working_strategy.py
trash/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a5cafa3df673ba29___init___py.html  z_a5cafa3df673ba29_analyzer_py.html  z_a5cafa3df673ba29_api_py.html  z_a5cafa3df673ba29_config_py.html  z_a5cafa3df673ba29_dpi_detector_py.html  z_a5cafa3df673ba29_executor_py.html  (+7 more)
